# twist

./: CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt
include/twist/: exceptions.hpp
include/twist/base64/: base64_traits.hpp  encoder.hpp
include/twist/fusion/: advance.hpp  decrement.hpp  dereference.hpp  dereference_at.hpp  get_begin_sequence.hpp  get_end_sequence.hpp  get_vector_of.hpp  increment.hpp
include/twist/iterator/: lowest_traversal.hpp  traversal.hpp
include/twist/iterator/adaptor/: TODO  base64_decoding.hpp  base64_encoding.hpp  byte_stream.hpp  concatenated.hpp  downgraded.hpp  interleaved.hpp  json_decoding.hpp  json_string_decoding.hpp  json_string_encoding.hpp  lined.hpp  picked.hpp  pure_transformed.hpp  shadowed.hpp  sliced.hpp  utf16_decoding.hpp  utf16_encoding.hpp  utf8_decoding.hpp  utf8_encoding.hpp  zipped.hpp
include/twist/json/: json.hpp
include/twist/range/: begin.hpp  end.hpp  is_expected_traversal.hpp
include/twist/range/adaptor/: base64_decoding.hpp  base64_encoding.hpp  concatenated.hpp  detached.hpp  downgraded.hpp  interleaved.hpp  json_decoding.hpp  json_string_decoding.hpp  json_string_encoding.hpp  lined.hpp  picked.hpp  pure_transformed.hpp  shadowed.hpp  sliced.hpp  utf16_decoding.hpp  utf16_encoding.hpp  utf8_decoding.hpp  utf8_encoding.hpp  zipped.hpp
include/twist/resizable_array/: resizable_array.hpp
include/twist/type_traits/: is_iterator.hpp
include/twist/utils/: bit_queue.hpp  is_range.hpp
include/twist/variadic_templates/: size.hpp
tests/: CMakeLists.txt
tests/fusion/: CMakeLists.txt  get_begin_sequence.cpp  get_end_sequence.cpp
tests/json/: CMakeLists.txt  json.cpp
tests/range/: CMakeLists.txt  a.out  base64.cpp  begin.cpp  concatenated.cpp  detached.cpp  downgraded.cpp  interleaved.cpp  json.cpp  json_string.cpp  lowest_traversal.cpp  pure_transformed.cpp  shadowed.cpp  sliced.cpp  utf16.cpp  utf8.cpp
tests/resizable_array/: CMakeLists.txt  resizable_array.cpp
tests/utils/: CMakeLists.txt  bit_queue.cpp
