ADD_EXECUTABLE( lowest_traversal lowest_traversal.cpp )
target_link_libraries( lowest_traversal ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${ZLIB_LIBRARIES} )
add_test( lowest_traversal lowest_traversal )
ADD_EXECUTABLE( begin begin.cpp )
target_link_libraries( begin ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${ZLIB_LIBRARIES} )
add_test( begin begin )
ADD_EXECUTABLE( concatenated concatenated.cpp )
target_link_libraries( concatenated ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( concatenated concatenated )
ADD_EXECUTABLE( sliced sliced.cpp )
target_link_libraries( sliced ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( sliced sliced )
ADD_EXECUTABLE( downgraded concatenated.cpp )
target_link_libraries( downgraded ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( downgraded downgraded )
ADD_EXECUTABLE( interleaved interleaved.cpp )
target_link_libraries( interleaved ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( interleaved interleaved )
ADD_EXECUTABLE( detached detached.cpp )
target_link_libraries( detached ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( detached detached )
ADD_EXECUTABLE( base64 base64.cpp )
target_link_libraries( base64 ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( base64 base64 )
ADD_EXECUTABLE( utf8 utf8.cpp )
target_link_libraries( utf8 ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( utf8 utf8 )
ADD_EXECUTABLE( utf16 utf16.cpp )
target_link_libraries( utf16 ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( utf16 utf16 )
ADD_EXECUTABLE( json_string json_string.cpp )
target_link_libraries( json_string ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( json_string json_string )
ADD_EXECUTABLE( shadowed shadowed.cpp )
target_link_libraries( shadowed ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( shadowed shadowed )
ADD_EXECUTABLE( pure_transformed pure_transformed.cpp )
target_link_libraries( pure_transformed ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( pure_transformed pure_transformed )
ADD_EXECUTABLE( json_decoding json.cpp )
target_link_libraries( json_decoding ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
add_test( json_decoding json_decoding )
